# Home

./: 404.html  README.md  index.html  mkdocs.yml
.github/workflows/: static.yml
ESP-32_Project/LT_Control_server2.0.1cpp/: CMakeLists.txt  sdkconfig
ESP-32_Project/LT_Control_server2.0.1cpp/main/: CMakeLists.txt  main.cpp  main.h
ESP-32_Project/LT_Control_server2.0.1cpp/main/include/CPPGPIO/: cppgpio.h
ESP-32_Project/LT_Control_server2.0.1cpp/main/include/LED_STRIP/: led_strip_ctl.h
ESP-32_Project/LT_Control_server2.0.1cpp/main/include/LT/: LT.h
ESP-32_Project/LT_Control_server2.0.1cpp/main/include/Server/: page.h  page_lt.h  server.h
ESP-32_Project/LT_Control_server2.0.1cpp/main/include/WiFi/: wifi_setup.h
ESP-32_Project/LT_Control_server2.0.1cpp/main/src/CPPGPIO/: LT.cpp  cppgpio.cpp
ESP-32_Project/LT_Control_server2.0.1cpp/main/src/LED_STRIP/: led_strip_encoder.c
ESP-32_Project/LT_Control_server2.0.1cpp/main/src/LT/: LT.cpp
ESP-32_Project/LT_Control_server2.0.1cpp/main/src/SERVER/: server.cpp
ESP-32_Project/LT_Control_server2.0.1cpp/main/src/WiFi/: wifi_setup.cpp
Hydroponics/: Index.md
docs/: FOR_jenny.md  page2.md
docs/docs/: page2.md
for_jenny/Doc/: Technical_documentation.md
for_jenny/Doc/docs/: index.md
for_jenny/Doc/site/: 404.html  index.html
for_jenny/Doc/site/page2/: index.html
for_jenny/Doc/site/search/: search_index.json
page2/: index.html
search/: search_index.json
